plugins {
    id "java"
    id "maven-publish"
}

group 'com.roman_ks.maze'

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

ext {
    private_repo_username = System.getenv('private_repo_username')
    private_repo_password = System.getenv('private_repo_password')
}

repositories {
    mavenCentral()
}

dependencies {
    def junitVersion = '5.7.1'
    def mockitoVersion = '3.8.0'

    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            credentials {
                username = rootProject.ext.private_repo_username
                password = rootProject.ext.private_repo_password
            }
            url = "https://repo.repsy.io/mvn/${rootProject.ext.private_repo_username}/default"
        }
    }
}

jar {
    from "LICENSE"
}

test {
    useJUnitPlatform()

    systemProperty "file.encoding", "utf-8"
}